refactor(core): decouple core engine and introduce interceptor pipeline